--- a/stuart/Cargo.toml
+++ b/stuart/Cargo.toml
@@ -9,3 +9,12 @@ pulldown-cmark = "^0.9.2"
 lazy_static = "^1.4.0"
 dateparser = "0.1.7"
 chrono = "^0.4"
+termcolor = "^1.1.0"
+
+# TOML parsing
+toml = "^0.5"
+serde = "^1.0"
+serde_derive = "^1.0"
+
+# Argument parsing
+clap = "^3.2"
