--- a/stuart/Cargo.toml
+++ b/stuart/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 humphrey_json = "^0.2.0"
 pulldown-cmark = "^0.9.2"
 lazy_static = "^1.4.0"
+once_cell = "^1.13.1"
 dateparser = "0.1.7"
 chrono = "^0.4"
 termcolor = "^1.1.0"
