--- a/stuart/Cargo.toml
+++ b/stuart/Cargo.toml
@@ -15,4 +15,5 @@ serde_derive = "^1.0"
 termcolor = "^1.1.0"
 once_cell = "^1.13.1"
 humphrey = "^0.6.4"
+humphrey_ws = "^0.5.0"
 notify = "^4.0.17"
