--- a/stuart/Cargo.toml
+++ b/stuart/Cargo.toml
@@ -14,6 +14,7 @@ serde = "^1.0"
 serde_derive = "^1.0"
 termcolor = "^1.1.0"
 once_cell = "^1.13.1"
+include_dir = "^0.7.2"
 humphrey = "^0.6.4"
 humphrey_ws = "^0.5.0"
 notify = "^4.0.17"
