--- a/stuart/Cargo.toml
+++ b/stuart/Cargo.toml
@@ -2,11 +2,20 @@
 name = "stuart"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+homepage = "https://github.com/w-henderson/Stuart"
+repository = "https://github.com/w-henderson/Stuart"
+description = "A Blazingly-Fast Static Site Generator."
+keywords = ["ssg", "cli"]
+categories = ["template-engine", "web-programming", "command-line-utilities"]
+readme = "../README.md"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "stuart"
+path = "src/main.rs"
 
 [dependencies]
-stuart_core = { path = "../stuart-core" }
+stuart_core = { version = "^0.1.0", path = "../stuart-core" }
 
 clap = "^3.2"
 toml = "^0.5"
