--- a/stuart-core/Cargo.toml
+++ b/stuart-core/Cargo.toml
@@ -16,6 +16,7 @@ pulldown-cmark = "^0.9.2"
 lazy_static = "^1.4.0"
 dateparser = "0.1.7"
 chrono = "^0.4"
+crc32fast = "^1.3.2"
 
 [lib]
 doctest = false
