--- a/stuart-core/Cargo.toml
+++ b/stuart-core/Cargo.toml
@@ -11,11 +11,16 @@ categories = ["template-engine", "web-programming"]
 readme = "../README.md"
 
 [dependencies]
-humphrey_json = "^0.2.0"
-pulldown-cmark = "^0.9.2"
+humphrey_json = { version = "^0.2.0", default-features = false }
+pulldown-cmark = { version = "^0.9.2", default-features = false }
 lazy_static = "^1.4.0"
-dateparser = "0.1.7"
-chrono = "^0.4"
+
+dateparser = { version = "0.1.7", optional = true }
+chrono = { version = "^0.4", optional = true }
+
+[features]
+default = ["date"]
+date = ["chrono", "dateparser"]
 
 [lib]
 doctest = false
