--- a/plugins/imgopt/Cargo.toml
+++ b/plugins/imgopt/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-stuart_core = { path = "../../stuart-core" }
+stuart_core = { path = "../../stuart-core", default-features = false }
 oxipng = "6.0.1"
 
 [lib]
