--- a/stuart/Cargo.toml
+++ b/stuart/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "stuart"
-version = "0.2.5"
+version = "0.2.6"
 edition = "2021"
 license = "MIT"
 homepage = "https://github.com/w-henderson/Stuart"
@@ -15,7 +15,7 @@ name = "stuart"
 path = "src/main.rs"
 
 [dependencies]
-stuart_core = { version = "^0.2.5", path = "../stuart-core" }
+stuart_core = { version = "^0.2.6", path = "../stuart-core" }
 
 clap = "^3.2"
 toml = "^0.5"
@@ -24,7 +24,7 @@ serde_derive = "^1.0"
 termcolor = "^1.1.0"
 once_cell = "^1.13.1"
 include_dir = "^0.7.2"
-humphrey = "^0.6.4"
-humphrey_ws = "^0.5.0"
+humphrey = { version = "^0.7.0", features = ["tls"] }
+humphrey_ws = "^0.5.1"
 notify = "^4.0.17"
 libloading = "^0.7.3"
