--- a/stuart/Cargo.toml
+++ b/stuart/Cargo.toml
@@ -25,6 +25,12 @@ termcolor = "^1.1.0"
 once_cell = "^1.13.1"
 include_dir = "^0.7.2"
 humphrey = { version = "^0.7.0", features = ["tls"] }
+humphrey_json = { version = "^0.2.0", default-features = false }
 humphrey_ws = "^0.5.1"
 notify = "^4.0.17"
 libloading = "^0.7.3"
+v8 = { version = "^0.82.0", optional = true }
+
+[features]
+default = ["js"]
+js = ["v8"]
