--- a/stuart/Cargo.toml
+++ b/stuart/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "stuart"
-version = "0.2.7"
+version = "0.3.0"
 edition = "2021"
 license = "MIT"
 homepage = "https://github.com/w-henderson/Stuart"
@@ -15,7 +15,7 @@ name = "stuart"
 path = "src/main.rs"
 
 [dependencies]
-stuart_core = { version = "^0.2.6", path = "../stuart-core" }
+stuart_core = { version = "^0.3.0", path = "../stuart-core" }
 
 clap = "^3.2"
 toml = "^0.5"
@@ -25,6 +25,11 @@ termcolor = "^1.1.0"
 once_cell = "^1.13.1"
 include_dir = "^0.7.2"
 humphrey = { version = "^0.7.0", features = ["tls"] }
+humphrey_json = { version = "^0.2.0", default-features = false }
 humphrey_ws = "^0.5.1"
 notify = "^4.0.17"
 libloading = "^0.7.3"
+v8 = { version = "^0.82.0", optional = true }
+
+[features]
+js = ["v8"]
