--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -28,6 +28,12 @@ jobs:
           command: check
           args: -p stuart
 
+      - name: Run cargo check --all-features
+        uses: actions-rs/cargo@v1
+        with:
+          command: check
+          args: -p stuart --all-features
+
   test:
     name: Test
     runs-on: ubuntu-latest
@@ -47,3 +53,9 @@ jobs:
         with:
           command: test
           args: -p stuart
+
+      - name: Run cargo test --all-features
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: -p stuart --all-features
